# intent_classifier_llm_tools

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.dev.txt  requirements.txt  tool_definitions.json
intent_classifier_llm_tools/: hosting.py  main.py
intent_classifier_llm_tools/protocols/: i_azure_openai_service.py
intent_classifier_llm_tools/services/: azure_openai_service.py
intent_classifier_llm_tools/utils/: auth.py
tests/intent_classifier_llm_tools/services/: test_azure_openai_service.py
tests/intent_classifier_llm_tools/utils/: test_auth.py
